# Deepnest

./: GeneticAlgorithm.h  GeometryProcessor.cpp  GeometryProcessor.h  NestingContext.cpp  NestingContext.h  NestingWorker.cpp  NestingWorker.h  NfpCache.h  NfpGenerator.cpp  SvgParser.cpp  boost_minkowski.cpp  boost_minkowski.h
DeepNestQt/: DeepNestQt.pro
DeepNestQt/examples/NestingDemo/: NestingDemo.pro  main.cpp  mainWindow.cpp  mainWindow.h
DeepNestQt/src/Core/: geneticAlgorithm.cpp  geneticAlgorithm.h  internalTypes.cpp  internalTypes.h  nestingEngine.cpp  nestingEngine.h
DeepNestQt/src/Geometry/: HullPolygon.cpp  HullPolygon.h  SimplifyPath.cpp  SimplifyPath.h  geometryUtils.cpp  geometryUtils.h  nfpCache.cpp  nfpCache.h  nfpGenerator.cpp  nfpGenerator.h
DeepNestQt/src/SvgNest/: nestingWorker.cpp  nestingWorker.h  placementTypes.cpp  placementTypes.h  svgNest.cpp  svgNest.h
DeepNestQt/tests/: main_test.cpp  tests.pro  tst_SvgNest.cpp  tst_SvgNest.h
QtDeepnest/: CMakeLists.txt  qtdeepnest.pro
QtDeepnest/include/: Config.h  DataStructures.h  GeneticAlgorithm.h  NestingContext.h  NestingWorker.h  NfpGenerator.h  SvgParser.h  mainwindow.h
QtDeepnest/src/: GeneticAlgorithm.cpp  GeometryProcessor.cpp  NestingContext.cpp  NestingWorker.cpp  NfpCache.cpp  NfpGenerator.cpp  SvgParser.cpp  boost_minkowski.cpp  mainwindow.cpp
